# opengllab

./: .gitignore  report.md
lab4/DensePose/: .gitignore  README.md  environment.yml  requirements.txt
lab4/DensePose/modules/chumpy/: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  requirements.txt  setup.py
lab4/DensePose/modules/chumpy/.circleci/: config.yml
lab4/DensePose/modules/chumpy/chumpy/: __init__.py  api_compatibility.py  ch.py  ch_ops.py  ch_random.py  extras.py  linalg.py  logic.py  monitor.py  np_tensordot.py  optimization.py  optimization_internal.py  optional_test_performance.py  reordering.py  test_ch.py  test_inner_composition.py  test_linalg.py  test_optimization.py  testing.py  utils.py  version.py
lab4/DensePose/modules/detectron/: setup.py
lab4/DensePose/modules/detectron/detectron/datasets/data/coco/annotations/: file.txt
lab4/DensePose/modules/detectron/detectron/utils/: densepose_methods.py
lab4/DensePose/notebooks/: COCO-Visualize.ipynb  COCO-Visualize.py  COCO-on-SMPL.ipynb  COCO-on-SMPL.py  RCNN-Texture-Transfer.ipynb  RCNN-Texture-Transfer.py  RCNN-Visualize-Results.ipynb  RCNN-Visualize-Results.py
lab4/DensePose/notebooks/origin-notebooks/: DensePose-COCO-Visualize copy.ipynb  DensePose-COCO-on-SMPL copy.ipynb
lab5/: CMakeLists.txt  run.sh
lab5/include/glad/: glad.h
lab5/src/: glad.c  model_loading.cpp
lab6/: CMakeLists.txt  run.sh
lab6/include/: filesystem.h
lab6/learnopengl/: model.h
lab6/shaders/: 1.model_loading.fs  5.2.light_casters.fs  9.1.geometry_shader.gs  9.1.geometry_shader.vs  grass.fs  grass.gs  grass.vs
lab6/src/: model_loading.cpp  texture_utils.cpp  texture_utils.h
report/: report.md
